# rust_test

./: 404.html  Cargo.toml  README.md  foo.txt  hello.html
src/: Cargo.toml  common.rs  main.rs  newland.rs  test.rs
testbox/: Cargo.toml
