[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145" , features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rayon = { version = "1.5.3" }
log = { version = "0.4.17" }
itertools = { version = "0.10.5" }
hyper = { version = "0.14.20" }
proptest = { version = "1.0.0" }
libloading = { version = "0.7.3" }
crate = { version = "0.0.2" }
async-std = { version = "1.12.0", features = ["attributes"] }
rand = { version = "0.8.5" }
console = { version = "0.15.2" }
owo-colors = { version = "3.5.0" }

